--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -57,18 +57,26 @@ ru:
      btn_cat: 'Категории'
      btn_works: 'В разработке'
      btn_new_cat: 'Новая категория'
-     btn_hom: 'Мой сайт'
+     btn_hom: 'Web Joys'
      btn_articles: 'Статьи'
+     btn_blog: 'Блог'
      btn_contacts: 'Контакты'
      new_articles: 'Новая статья'  
      qwestchion: 'Вы уверены?'
      tags_title: 'Теги'
-
+     map_site: 'Карта сайта'
+     create_site: 'Разработка web приложений'
+     btn_card: 'Сайт визитка'
+     btn_blog_site: 'Сайт блог'
+     title_text: 'Разработка Web приложений'
+     In_project: 'В проекте'
+     online_shop: 'Интернет магазин'
+     public_services: 'Государственные услуги'
    admin:
      btn_cat: 'Категории'
      btn_works: 'В разработке'
      btn_new_cat: 'Новая категория'
-     btn_hom: 'Мой сайт'
+     btn_hom: 'Web Joys'
      btn_articles: 'Статьи'
      btn_contacts: 'Контакты'
      new_articles: 'Новая статья'  
@@ -77,11 +85,32 @@ ru:
    index:
      btn_works: 'В разработке'
      btn_new_cat: 'Новая категория'
-     btn_hom: 'Мой сайт'
+     btn_hom: 'Web Joys'
      btn_articles: 'Блог'
      btn_contacts: 'Контакты'
      logo_text: 'портфолио веб разработчика'  
-    
+     btn_blog: 'Блог'
+     btn_blog_site: 'Сайт блог'
+     map_site: 'Карта сайта'
+     create_site: 'Разработка web приложений'
+     btn_card: 'Сайт визитка'
+     text_home_title: 'Птичка'
+     text_home1: 'В чужбине свято наблюдаю'
+     text_home2: 'Родной обычай старины:'
+     text_home3: 'На волю птичку выпускаю'
+     text_home4: 'При светлом празднике весны.'
+     text_home5: 'Я стал доступен утешенью;'
+     text_home6: 'За что на бога мне роптать,'
+     text_home7: 'Когда хоть одному творенью'
+     text_home8: 'Я мог свободу даровать!'
+     text_as:   'А.С.Пушкин'
+     title_text: 'Разработка Web приложений'
+     text_landing1: '"TRAVEL" -- cайт о путешествиях'
+     read_more: 'Далее'
+     text_blog: 'Блог на Ruby on Rails'
+     text_blog1: 'Как я создал этот сайт'
+     text_landing0: 'Эффекты для сайта'
+     text_landing_title: 'Параллакс эффект + javascript анимация'
   admin: 
    posts:
     create_yes: 'Статья успешно создана'
