--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -110,7 +110,7 @@ ru:
      text_blog: 'Блог на Ruby on Rails'
      text_blog1: 'Как я создал этот сайт'
      text_landing0: 'Эффекты для сайта'
-     text_landing_title: 'Параллакс эффект + javascript анимация'
+     text_landing_title: 'Параллакс, javascript анимация'
   admin: 
    posts:
     create_yes: 'Статья успешно создана'
