--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,20 @@ en:
      text_blog1: 'How I created this site'
      text_landing0: 'Effects for the site'
      text_landing_title: 'Parallax, javascript animation'
+     read_s1: 'PROJECTS'
+     read_s2: 'DESIGN'
+     read_s3: 'BLOG'
+     read_ms1: 'sites and applications'
+     read_ms2: 'themes and templates' 
+     read_ms3: 'articles and stories' 
+     gratitude: 'GRATITUDE'
+     gratitude_vps: 'JUSTHOST HOSTING'
+     gratitude_vps2: 'for an affordable and well-functioning VPS'
+     gratitude_ds: 'YouTube CHANNEL dev simple'
+     gratitude_ds2: 'thanks to his lessons I created this site'
+     gratitude_blog: 'Blog on Ruby on Rails'
+     Landing1: 'MY FIRST Landing Page'
+     post_effect: 'Photoshop, CSS, JavaScript'
   posts:
     create_yes: 'Article successfully created'
     create_no: 'Article not created'
