--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -111,6 +111,20 @@ ru:
      text_blog1: 'Как я создал этот сайт'
      text_landing0: 'Эффекты для сайта'
      text_landing_title: 'Параллакс, javascript анимация'
+     read_s1: 'ПРОЕКТЫ'
+     read_s2: 'ДИЗАЙН'
+     read_s3: 'БЛОГ'
+     read_ms1: 'сайты и приложения'
+     read_ms2: 'темы и шаблоны' 
+     read_ms3: 'статьи и рассказы' 
+     gratitude: 'БЛАГОДАРНОСТЬ'
+     gratitude_vps: 'ХОСТИНГУ JUSTHOST'
+     gratitude_vps2: 'за доступный и хорошо работающий VPS'
+     gratitude_ds: 'YouTube КАНАЛУ dev simple'
+     gratitude_ds2: 'благодаря его урокам я создал этот сайт'
+     gratitude_blog: 'Блог на Ruby on Rails'
+     Landing1: 'МОЙ ПЕРВЫЙ Landing Page'
+     post_effect: 'Photoshop, CSS, JavaScript'
   admin: 
    posts:
     create_yes: 'Статья успешно создана'
